tests/typescript/pos/arrays/arr-01.ts
/*@ foo :: ({ [number] | (len v) = 1 } ) => { number | true } */
function foo(a : number []) : number {

  return a[0];

}
