tests/typescript/neg/arrays/arr-01.ts
/*@ foo :: ({ [number] | (len v) < 10 } ) => { number | true } */
function foo(a) {

  return a[9];

}
